--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,9 +1,20 @@
+/* Color */
 :root {
-  --background-color: #fafafa;
+  --background-color: #f5f5f5;
   --text-color: #000000;
+  --text-accent-one: #00a8ce;
+  --svg-fill: #1e2124;
 }
 
 html[data-color-scheme="dark"] {
   --background-color: #1e2124;
   --text-color: #f5f5f5;
+  --text-accent-one: #95ff00;
+  --svg-fill: 
+;
+}
+
+html {
+  --easing-expo: cubic-bezier(0.16, 1, 0.3, 1);
+  --ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
 }
