--- a/src/style/image-loading.scss
+++ b/src/style/image-loading.scss
@@ -10,10 +10,7 @@
     display: block;
     margin: 0 auto;
     width: 100%;
-    // height: auto;
-    // opacity: 0;
-    // filter: blur(1px);
-    // will-change: transform, filter, opacity;
+    height: auto;
   }
 }
 
@@ -25,13 +22,16 @@
   left: 0;
   display: block;
   transition: opacity 1600ms var(--ease-out-cubic);
+  transition-delay: 200ms;
   opacity: 1;
+  will-change: opacity;
 }
 
 /*
 On load we need to swap positions.
-Without an image in position the 
-placeholder will not flow correctly
+Without an image (and its position as relative) the 
+placeholder will not flow correctly as it's absolutely 
+positioned over the image.
 */
 .img-main.visible {
   img {
