--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -36,6 +36,52 @@ $desktop: 1024px;
 @mixin progressive-width {
   max-width: 1800px;
   margin: 0 auto;
+  padding-left: clamp(0px, calc(10px + (240 * ((100vw - 768px) / (1200 - 320)))), 250px);
+  padding-right: clamp(0px, calc(10px + (240 * ((100vw - 768px) / (1200 - 320)))), 250px);
+}
+
+@mixin progressive-width-non-image {
+  max-width: 1800px;
+  margin: 0 auto;
   padding-left: clamp(10px, calc(10px + (240 * ((100vw - 768px) / (1200 - 320)))), 250px);
   padding-right: clamp(10px, calc(10px + (240 * ((100vw - 768px) / (1200 - 320)))), 250px);
 }
+
+/* A-la carte styling */
+.box-shadow {
+  box-shadow:
+    2px 1px 4px 0px rgba(0, 0, 0, 0.5),
+    8px 8px 9px 0px rgba(0, 0, 0, 0.2);
+}
+
+.filter-shadow {
+  filter: drop-shadow(3px 5px 5px rgba(0, 0, 0, 0.5)) drop-shadow(11px 18px 15px rgba(0, 0, 0, 0.33));
+}
+
+.init-margin {
+  margin: 0 2%;
+}
+
+.fade-out {
+  animation: fadeOutPage 500ms var(--easing-expo) forwards;
+}
+
+@keyframes fadeOutPage {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+}
+
+// @keyframes fadeInPage {
+//   0% {
+//     opacity: 0;
+//   }
+//   100% {
+//     opacity: 1;
+//   }
+// }
