--- a/src/style/landing-project.scss
+++ b/src/style/landing-project.scss
@@ -1,153 +1,135 @@
 @use "./mixins.scss" as *;
 
-.landing-project_card {
-  &--left,
-  &--right {
-    padding: 0;
-    .landing-project_card-text {
-      margin: 0 2% 70px;
-      color: var(--text-color);
-      h3 {
-        margin-top: 5px;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 130%;
-      }
-      p {
-        margin-top: 3px;
-        font-size: 13px;
-        font-weight: 400;
-        line-height: 145%;
-        letter-spacing: 0.04em;
-      }
-      @include tablet {
-        // .landing-project_card-text
-        margin-top: 6%;
-      }
-    }
-    // both --left & --right
-    @include tablet {
-      margin: 0 2%;
-      display: grid;
-      gap: 20px;
-      grid-template-columns: repeat(6, 1fr);
-      background: var(--project-back);
-      border-radius: 16px;
-      margin-bottom: 120px;
-      h3 {
-        font-weight: 300;
-        font-size: 20px;
-      }
-      p {
-        font-weight: 300;
-        font-size: 16px;
-        color: var(--text-color-lighter);
-      }
-    }
-  }
-  @include tablet {
-    &--left {
-      padding-left: calc(20px - 1%);
-      padding-right: 20px;
-      .landing-project_card-text {
-        margin-left: -2%;
-        grid-column: 5 / -1;
-        grid-row: 1 / -1;
-      }
-      & .img-main {
-        grid-column: 1 / 5;
-      }
-    }
-    &--right {
-      padding-left: 20px;
-      padding-right: calc(20px - 1%);
-      .landing-project_card-text {
-        grid-column: 1 / 3;
-        grid-row: 1 / -1;
-      }
-      & .img-main {
-        grid-column: 3 / -1;
-      }
-    }
-  }
+section.landing-projects_section {
+  display: block;
 }
 
-.landing-projects_section {
-  padding: 50px 0;
-  max-width: 100vw;
-  @include tablet {
-    padding: 120px 0 0;
+article.landing-project_card {
+  display: block;
+  margin: 0 -2%; // remover for larger
+  .landing-project_card-text {
+    margin: 0 2%;
   }
-}
-
-.about_image_wrapper {
-  height: 100px;
-  width: 100px;
-  margin: 40px auto;
-  position: relative;
-  overflow: hidden;
-
-  svg {
-    width: 100%;
-    height: 100%;
-    stroke: none;
-    fill: #1e2124;
-    border-radius: 50%;
-    background-color: #f5f5f5;
-    transform: translateX(-0.125px);
-    @include tablet {
-      border-radius: 10px;
-    }
+  h3 {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 140%;
   }
-}
-
-.landing-about_section {
-  margin: 45px 2% 0;
-  @include tablet {
-    margin: 60px 2% 0;
+  p {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 140%;
+  }
+  &.card--one,
+  &.card--two {
+    margin-bottom: 75px;
   }
 }
 
 @include tablet {
-  .landing-about_section-wrapper {
+  article.landing-project_card {
+    margin: 0;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 20px;
-
-    .about_text {
-      grid-column: 1 / -2;
-      grid-row: 1 / -1;
+    gap: 20px;
+    grid-template-columns: repeat(6, 1fr);
+    border-radius: 15px;
+    background: var(--project-back);
+    h3 {
+      font-size: 20px;
+      font-weight: 300;
     }
-    .about_image_wrapper {
-      margin: 0;
-      grid-row: 1 / -1;
-      grid-column: -2 / -1;
-      display: grid;
-      width: 100%;
-      height: auto;
-      aspect-ratio: 1;
-      max-width: 150px;
-      max-height: 150px;
-      justify-self: flex-end;
-      svg {
-        grid-column: 1 / -1;
+    p {
+      margin-top: 5px;
+      font-size: 16px;
+      letter-spacing: 0.32px;
+    }
+
+    &.card--one,
+    &.card--three {
+      .landing-project_card-text {
+        grid-column: 5 / -1;
+        grid-row: 1 / -1;
+        padding-top: 20px;
+        padding-right: 15px;
       }
+      .img-main {
+        grid-column: 1 / 5;
+        grid-row: 1 / -1;
+        margin-left: 10px;
+      }
+    }
+    &.card--two {
+      .landing-project_card-text {
+        grid-column: 1 / 3;
+        grid-row: 1 / -1;
+        padding-top: 20px;
+        padding-left: 15px;
+      }
+      .img-main {
+        grid-column: 3 / -1;
+        grid-row: 1 / -1;
+        margin-right: 10px;
+      }
+    }
+    &.card--one,
+    &.card--two {
+      margin: 120px 0;
     }
   }
 }
 
+@include desktop {
+  article.landing-project_card {
+    h3 {
+      font-size: 30px;
+      font-size: clamp(20px, 1.75vw, 30px);
+    }
+    p {
+      font-size: 20px;
+      font-size: clamp(16px, 1.05vw, 20px);
+    }
+  }
+}
+
+section.landing-about_section {
+  .about_image_wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    svg {
+      width: 130px;
+      border-radius: 40%;
+      fill: #1e2124;
+      background-color: #f5f5f5;
+    }
+  }
+}
+
+.about_text {
+  color: var(--text-color);
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 140%;
+  letter-spacing: 0.3px;
+}
+
+.about-spotify_inline {
+  color: var(--text-accent-one);
+}
+.colophon {
+  grid-column: 1 / 4;
+}
 .about-colophon-header {
   font-size: 15px;
-  margin: 60px 0 2px;
+  margin: 50px 0 2px;
   font-weight: 400;
   color: var(--text-color);
-  grid-column: 1 / -2;
 }
 .about-colophon-text {
   font-size: 14px;
   margin: 0;
   font-weight: 300;
-  grid-column: 1 / -2;
   color: var(--text-color);
   line-height: 145%;
   letter-spacing: 0.25px;
@@ -155,3 +137,153 @@
     text-decoration: underline;
   }
 }
+
+@include tablet {
+  section.landing-about_section {
+    .landing-about_section-wrapper {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      column-gap: 30px;
+    }
+    .about_text {
+      grid-column: 1 / 4;
+      grid-row: 1 / -1;
+    }
+    .about_image_wrapper {
+      grid-column: 4 / -1;
+      grid-row: 1 / -1;
+      svg {
+        border-radius: 12px;
+        width: 100%;
+        height: 100%;
+        height: fit-content;
+      }
+    }
+  }
+}
+
+@include desktop {
+  section.landing-about_section {
+    .landing-about_section-wrapper {
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+    }
+    .about_text {
+      grid-column: 1 / 4;
+      grid-row: 1 / -1;
+    }
+
+    .about_image_wrapper {
+      grid-column: 4 / -1;
+      grid-row: 1 / 4;
+      display: flex;
+      justify-content: center;
+      // align-items: center;
+      width: 100%;
+      height: 100%;
+      background-color: var(--background-color-transp);
+      svg {
+        border-radius: 12px;
+        max-width: 200px;
+        width: 100%;
+        height: 100%;
+        height: fit-content;
+      }
+    }
+    section.colophon {
+      margin: 0;
+      align-self: start;
+      grid-column: 1 / 4;
+      grid-row: 3 / 4;
+    }
+  }
+}
+
+// .about_image_wrapper {
+//   height: 125px;
+//   width: 125px;
+//   margin: -25px auto 45px;
+//   position: relative;
+//   overflow: hidden;
+//   border-radius: 15px;
+
+//   svg {
+//     width: 100%;
+//     height: 100%;
+//     stroke: none;
+//     fill: #1e2124;
+//     border-radius: 15px;
+//     background-color: #f5f5f5;
+//     transform: translateX(-0.125px);
+//     @include tablet {
+//       border-radius: 10px;
+//     }
+//   }
+// }
+
+// .landing-about_section {
+//   // margin: 45px 2% 0;
+//   @include tablet {
+//     // margin: 60px 2% 0;
+//   }
+// }
+
+// @include tablet {
+//   .landing-about_section-wrapper {
+//     display: grid;
+//     grid-template-columns: repeat(4, 1fr);
+//     column-gap: 20px;
+
+//     .about_text {
+//       grid-column: 1 / -2;
+//       grid-row: 1 / -1;
+//     }
+//     .about_image_wrapper {
+//       margin: 0;
+//       grid-row: 1 / -1;
+//       grid-column: -2 / -1;
+//       display: grid;
+//       width: 100%;
+//       height: auto;
+//       aspect-ratio: 1;
+//       max-width: 150px;
+//       max-height: 150px;
+//       justify-self: flex-end;
+//       svg {
+//         grid-column: 1 / -1;
+//       }
+//     }
+//   }
+// }
+
+// .about-colophon-header {
+//   font-size: 15px;
+//   margin: 50px 0 2px;
+//   font-weight: 400;
+//   color: var(--text-color);
+//   grid-column: 1 / -2;
+// }
+// .about-colophon-text {
+//   font-size: 14px;
+//   margin: 0;
+//   font-weight: 300;
+//   grid-column: 1 / -2;
+//   color: var(--text-color);
+//   line-height: 145%;
+//   letter-spacing: 0.25px;
+//   & a {
+//     text-decoration: underline;
+//   }
+// }
+
+// .about_text {
+//   color: var(--text-color);
+//   font-size: 18px;
+//   font-weight: 300;
+//   line-height: 145%;
+//   letter-spacing: 0.18px;
+// }
+
+// .about-spotify_inline {
+//   color: var(--text-accent-one);
+// }
