--- a/src/style/section-divider.scss
+++ b/src/style/section-divider.scss
@@ -1,10 +1,10 @@
 @use "mixins.scss" as *;
 
 .section_divider {
-  width: 96%;
+  width: 100%;
   height: fit-content;
   border-bottom: 0.75px solid var(--text-color);
-  margin:0 auto;
+  margin:0 auto 25px;
   h2 {
     font-size: 20px;
     margin: 0;
@@ -13,7 +13,10 @@
     letter-spacing: 1px;
     @include tablet {
       font-size: 30px;
+      margin-left: 0;
+      margin-right: 0;
+      grid-column: 1 / -1;
+      grid-row: 1 / 2;
     }
   }
-  
 }
