--- a/src/style/landing-project.scss
+++ b/src/style/landing-project.scss
@@ -6,9 +6,9 @@ section.landing-projects_section {
 
 article.landing-project_card {
   display: block;
-  margin: 0 -2%; // remover for larger
+  // margin: 0 2%; // remover for larger
   .landing-project_card-text {
-    margin: 0 2%;
+    // margin: 0 2%;
   }
   h3 {
     font-size: 16px;
@@ -32,8 +32,9 @@ article.landing-project_card {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(6, 1fr);
-    border-radius: 15px;
+    border-radius: 5% / 9%;
     background: var(--project-back);
+    padding: 20px;
     h3 {
       font-size: 20px;
       font-weight: 300;
@@ -43,32 +44,38 @@ article.landing-project_card {
       font-size: 16px;
       letter-spacing: 0.32px;
     }
+    &.card--one {
+      .img-main img {
+        border-radius: 5.5% / 7%;
+        border-bottom-right-radius: 0;
+      }
+    }
 
     &.card--one,
     &.card--three {
       .landing-project_card-text {
         grid-column: 5 / -1;
         grid-row: 1 / -1;
-        padding-top: 20px;
-        padding-right: 15px;
+        // padding-top: 20px;
+        // padding-right: 15px;
       }
       .img-main {
         grid-column: 1 / 5;
         grid-row: 1 / -1;
-        margin-left: 10px;
+        // margin-left: 10px;
       }
     }
     &.card--two {
       .landing-project_card-text {
         grid-column: 1 / 3;
         grid-row: 1 / -1;
-        padding-top: 20px;
-        padding-left: 15px;
+        // padding-top: 20px;
+        // padding-left: 15px;
       }
       .img-main {
         grid-column: 3 / -1;
         grid-row: 1 / -1;
-        margin-right: 10px;
+        // margin-right: 10px;
       }
     }
     &.card--one,
@@ -88,20 +95,31 @@ article.landing-project_card {
       font-size: 20px;
       font-size: clamp(16px, 1.05vw, 20px);
     }
+    &.card--two {
+      border-radius: 4.5% / 8%;
+    }
+    &.card--three {
+      border-radius: 4.8% / 10%;
+    }
   }
 }
 
 section.landing-about_section {
   .about_image_wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+    // display: flex;
+    // justify-content: center;
+    margin: 20px auto;
+    width: 130px;
+    height: 130px;
+    position: relative;
     svg {
-      width: 130px;
-      border-radius: 40%;
+      border: 2px solid var(--background-color);
+      height: 100%;
+      width: 100;
+      border-radius: 50%;
       fill: #1e2124;
-      background-color: #f5f5f5;
+      aspect-ratio: 1;
+      background: #f5f5f5;
     }
   }
 }
@@ -117,8 +135,9 @@ section.landing-about_section {
 .about-spotify_inline {
   color: var(--text-accent-one);
 }
-.colophon {
+section.colophon:first-of-type {
   grid-column: 1 / 4;
+  margin: 50px 0 0;
 }
 .about-colophon-header {
   font-size: 15px;
@@ -142,8 +161,9 @@ section.landing-about_section {
   section.landing-about_section {
     .landing-about_section-wrapper {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(5, 1fr);
       column-gap: 30px;
+      row-gap: 30px;
     }
     .about_text {
       grid-column: 1 / 4;
@@ -152,6 +172,8 @@ section.landing-about_section {
     .about_image_wrapper {
       grid-column: 4 / -1;
       grid-row: 1 / -1;
+      padding-left: 100px;
+      padding-bottom: 100px;
       svg {
         border-radius: 12px;
         width: 100%;
@@ -178,7 +200,7 @@ section.landing-about_section {
       grid-row: 1 / 4;
       display: flex;
       justify-content: center;
-      // align-items: center;
+      padding: 0;
       width: 100%;
       height: 100%;
       background-color: var(--background-color-transp);
