--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,7 +1,7 @@
 /* Color */
 :root {
   --background-color: #f5f5f5;
-  --background-color-transp: #f5f5f5a5 ;
+  --background-color-transp: #f5f5f5a5;
   --text-color: #000000;
   --text-color-lighter: #999999;
   --text-accent-one: #00a8ce;
@@ -9,8 +9,14 @@
   --proj-button-background: #f0f0f0;
   --proj-button-border: #cccccc;
   --word-salad-accent-one: #13952d;
+  --times-pilot-accent-one: rgb(68, 129, 59);
   --challenge-list-item: #808080;
   --extra-border: hsl(25, 21%, 92%);
+  --times-pilot-grey-boxes: #a3a2a2;
+  --times-pilot-green-boxes: #58af54;
+  --times-pilot-arrow: #959595;
+  --times-pilot-layout-boxes: #9d9d9d;
+  --circuit-app-accent-one: #f79240;
 }
 
 html[data-color-scheme="dark"] {
@@ -23,12 +29,19 @@ html[data-color-scheme="dark"] {
   --proj-button-background: #2b2b2b;
   --proj-button-border: #626262;
   --word-salad-accent-one: #68d87f;
+  --times-pilot-accent-one: #95ff00;
   --challenge-list-item: #b0b0b0;
   --extra-border: hsl(195, 4%, 16%);
+  --times-pilot-grey-boxes: #5f5f5f;
+  --times-pilot-green-boxes: #54c960;
+  --times-pilot-arrow: #767676;
+  --times-pilot-layout-boxes: #7a7a7a;
+  --circuit-app-accent-one: #eaaf80;
 }
 
 html {
   --easing-expo: cubic-bezier(0.16, 1, 0.3, 1);
   --ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
+  --ease-in-out-expo: cubic-bezier(0.87, 0, 0.13, 1);
   --box-shadow: box-shadow: 2px 1px 4px 0px rgba(0, 0, 0, 0.5), 8px 8px 9px 0px rgba(0, 0, 0, 0.2);
 }
