--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -17,6 +17,9 @@
   --times-pilot-arrow: #959595;
   --times-pilot-layout-boxes: #9d9d9d;
   --circuit-app-accent-one: #f79240;
+  --flowchart-one: #1e2124;
+  --flowchart-two: #707070;
+  --flowchart-three: #acacac;
 }
 
 html[data-color-scheme="dark"] {
@@ -37,6 +40,9 @@ html[data-color-scheme="dark"] {
   --times-pilot-arrow: #767676;
   --times-pilot-layout-boxes: #7a7a7a;
   --circuit-app-accent-one: #eaaf80;
+  --flowchart-one: #fafafa;
+  --flowchart-two: #939191;
+  --flowchart-three: #8a8a8a;
 }
 
 html {
