--- a/src/style/landing-project.scss
+++ b/src/style/landing-project.scss
@@ -6,10 +6,6 @@ section.landing-projects_section {
 
 article.landing-project_card {
   display: block;
-  // margin: 0 2%; // remover for larger
-  .landing-project_card-text {
-    // margin: 0 2%;
-  }
   h3 {
     font-size: 16px;
     font-weight: 400;
@@ -172,8 +168,10 @@ section.colophon:first-of-type {
     .about_image_wrapper {
       grid-column: 4 / -1;
       grid-row: 1 / -1;
-      padding-left: 100px;
+      margin: 0;
+      padding-left: 50%;
       padding-bottom: 100px;
+      width: 100%;
       svg {
         border-radius: 12px;
         width: 100%;
@@ -220,92 +218,3 @@ section.colophon:first-of-type {
     }
   }
 }
-
-// .about_image_wrapper {
-//   height: 125px;
-//   width: 125px;
-//   margin: -25px auto 45px;
-//   position: relative;
-//   overflow: hidden;
-//   border-radius: 15px;
-
-//   svg {
-//     width: 100%;
-//     height: 100%;
-//     stroke: none;
-//     fill: #1e2124;
-//     border-radius: 15px;
-//     background-color: #f5f5f5;
-//     transform: translateX(-0.125px);
-//     @include tablet {
-//       border-radius: 10px;
-//     }
-//   }
-// }
-
-// .landing-about_section {
-//   // margin: 45px 2% 0;
-//   @include tablet {
-//     // margin: 60px 2% 0;
-//   }
-// }
-
-// @include tablet {
-//   .landing-about_section-wrapper {
-//     display: grid;
-//     grid-template-columns: repeat(4, 1fr);
-//     column-gap: 20px;
-
-//     .about_text {
-//       grid-column: 1 / -2;
-//       grid-row: 1 / -1;
-//     }
-//     .about_image_wrapper {
-//       margin: 0;
-//       grid-row: 1 / -1;
-//       grid-column: -2 / -1;
-//       display: grid;
-//       width: 100%;
-//       height: auto;
-//       aspect-ratio: 1;
-//       max-width: 150px;
-//       max-height: 150px;
-//       justify-self: flex-end;
-//       svg {
-//         grid-column: 1 / -1;
-//       }
-//     }
-//   }
-// }
-
-// .about-colophon-header {
-//   font-size: 15px;
-//   margin: 50px 0 2px;
-//   font-weight: 400;
-//   color: var(--text-color);
-//   grid-column: 1 / -2;
-// }
-// .about-colophon-text {
-//   font-size: 14px;
-//   margin: 0;
-//   font-weight: 300;
-//   grid-column: 1 / -2;
-//   color: var(--text-color);
-//   line-height: 145%;
-//   letter-spacing: 0.25px;
-//   & a {
-//     text-decoration: underline;
-//   }
-// }
-
-// .about_text {
-//   color: var(--text-color);
-//   font-size: 18px;
-//   font-weight: 300;
-//   line-height: 145%;
-//   letter-spacing: 0.18px;
-// }
-
-// .about-spotify_inline {
-//   color: var(--text-accent-one);
-// }
