--- a/src/style/landing-project.scss
+++ b/src/style/landing-project.scss
@@ -31,6 +31,9 @@ article.landing-project_card {
     border-radius: 5% / 9%;
     background: var(--project-back);
     padding: 20px;
+    .landing-project_card-text {
+      padding-top: 10px;
+    }
     h3 {
       font-size: 20px;
       font-weight: 300;
@@ -49,6 +52,7 @@ article.landing-project_card {
 
     &.card--one,
     &.card--three {
+      padding-right: 30px;
       .landing-project_card-text {
         grid-column: 5 / -1;
         grid-row: 1 / -1;
@@ -56,10 +60,10 @@ article.landing-project_card {
       .img-main {
         grid-column: 1 / 5;
         grid-row: 1 / -1;
-        // margin-left: 10px;
       }
     }
     &.card--two {
+      padding-left: 30px;
       .landing-project_card-text {
         grid-column: 1 / 3;
         grid-row: 1 / -1;
@@ -97,8 +101,30 @@ article.landing-project_card {
 
 @media (hover: hover) {
   @include tablet {
-    .landing-project_card:hover {
-      transform: translateZ(50px);
+    article.landing-project_card {
+      transform-style: preserve-3d;
+      will-change: transform;
+      position: relative;
+      transition:
+        transform 80ms ease,
+        box-shadow 100ms ease;
+    }
+    article.landing-project_card picture,
+    article.landing-project_card .landing-project_card-text {
+      position: relative;
+      z-index: 1;
+      transition:
+        transform 400ms var(--ease-in-out-cubic),
+        filter 600ms var(--easing-expo);
+      filter: drop-shadow(rgba(0, 0, 0, 0) 2px 2px 2px) drop-shadow(rgba(0, 0, 0, 0) 5px 5px 6px);
+    }
+
+    article.landing-project_card:hover picture {
+      filter: drop-shadow(rgba(0, 0, 0, 0.65) 0px 1px 2px) drop-shadow(rgba(0, 0, 0, 0.25) 0px 5px 6px);
+      transform: translateZ(10px);
+    }
+    article.landing-project_card:hover .landing-project_card-text {
+      transform: translateZ(30px);
     }
   }
 }
