--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -49,5 +49,6 @@ html {
   --easing-expo: cubic-bezier(0.16, 1, 0.3, 1);
   --ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
   --ease-in-out-expo: cubic-bezier(0.87, 0, 0.13, 1);
+  --ease-in-out-cubic: cubic-bezier(0.65, 0, 0.35, 1);
   --box-shadow: box-shadow: 2px 1px 4px 0px rgba(0, 0, 0, 0.5), 8px 8px 9px 0px rgba(0, 0, 0, 0.2);
 }
